Blink doesn't always remove deleted whitespace at the end of textareas from the shadow DOM.

This results reading "blank" in some cases, when in fact the line contains text.
Bug: 731067
Change-Id: I3c74e7c42a5178b5900df12e361e61cce318f0dc
R=dmazzoni@chromium.org
TESTED=Manually using Jaws, existing unit tests